force-app/main/default/objects/Case/fields/Addendums_for_Program__c.field-meta.xml
<CustomField>
    <fullName>Addendums_for_Program__c</fullName>
    <label>Addendums for Program</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>