force-app/main/default/objects/Case/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <inlineHelpText>Please enter the budget year as following: FY-2024 or CY-2024</inlineHelpText>
    <label>Budget Year</label>
    <length>7</length>
    <type>Text</type>
</CustomField>