force-app/main/default/objects/Case/fields/Can_WEDC_Implement_Reason__c.field-meta.xml
<CustomField>
    <fullName>Can_WEDC_Implement_Reason__c</fullName>
    <label>Can WEDC Implement Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>