force-app/main/default/objects/Case/fields/Change_to_Program_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_to_Program_Proposal_Status__c</fullName>
    <description>Statuses for for Change to Program Proposal Case Record Type</description>
    <label>Change to Program Proposal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Division VP Approval 1</fullName>
            </value>
            <value>
                <fullName>Steering Committee Approval 1</fullName>
            </value>
            <value>
                <fullName>Investment Development</fullName>
            </value>
            <value>
                <fullName>Division VP Approval 2</fullName>
            </value>
            <value>
                <fullName>Steering Committee Approval 2</fullName>
            </value>
            <value>
                <fullName>Board Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>