force-app/main/default/objects/Case/fields/Collateral_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Requirements__c</fullName>
    <label>Collateral Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>