force-app/main/default/objects/Case/fields/Decision_Notes__c.field-meta.xml
<CustomField>
    <fullName>Decision_Notes__c</fullName>
    <description>Users input any additional comments here for the case and their decision action</description>
    <label>Decision Notes</label>
    <type>TextArea</type>
</CustomField>