force-app/main/default/objects/Case/fields/Deliverable_Output__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Output__c</fullName>
    <label>Deliverable Output</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>