force-app/main/default/objects/Case/fields/Division_VP__c.field-meta.xml
<CustomField>
    <fullName>Division_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures the user&apos;s Division VP when the user submits it for</description>
    <label>Division VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>