force-app/main/default/objects/Case/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <label>Eligibility Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>