force-app/main/default/objects/Case/fields/Eligible_or_Illegible_Fund__c.field-meta.xml
<CustomField>
    <fullName>Eligible_or_Illegible_Fund__c</fullName>
    <label>Eligible or Illegible Fund</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>