force-app/main/default/objects/Case/fields/Estimate_for_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Estimate_for_Evaluation__c</fullName>
    <label>Estimate for Evaluation</label>
    <type>TextArea</type>
</CustomField>