force-app/main/default/objects/Case/fields/Estimated_Award_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Award_Size__c</fullName>
    <label>Estimated Award Size</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>