force-app/main/default/objects/Case/fields/Expected_Impact__c.field-meta.xml
<CustomField>
    <fullName>Expected_Impact__c</fullName>
    <label>Expected Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>