force-app/main/default/objects/Case/fields/Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Funding_Source__c</fullName>
    <label>Funding Source</label>
    <type>TextArea</type>
</CustomField>