force-app/main/default/objects/Case/fields/HasBudget__c.field-meta.xml
<CustomField>
    <fullName>HasBudget__c</fullName>
    <description>Training Request Record Type - Is there a budget for this?</description>
    <inlineHelpText>Is there a budget for this?</inlineHelpText>
    <label>HasBudget</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>