force-app/main/default/objects/Case/fields/How_Many_Award__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Award__c</fullName>
    <label>How Many Award</label>
    <type>TextArea</type>
</CustomField>