force-app/main/default/objects/Case/fields/Ideal_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Time_Frame__c</fullName>
    <label>Ideal Time Frame</label>
    <type>TextArea</type>
</CustomField>