force-app/main/default/objects/Case/fields/Is_Business_or_Community_Application__c.field-meta.xml
<CustomField>
    <fullName>Is_Business_or_Community_Application__c</fullName>
    <label>Is Business or Community Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Application</fullName>
            </value>
            <value>
                <fullName>Community Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>