force-app/main/default/objects/Case/fields/Is_Competetive__c.field-meta.xml
<CustomField>
    <fullName>Is_Competetive__c</fullName>
    <label>Is Competetive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>