force-app/main/default/objects/Case/fields/Is_Economic_Need__c.field-meta.xml
<CustomField>
    <fullName>Is_Economic_Need__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do existing programs or entities (outside WEDC) meet this economic need? If yes, explain the differences between your proposal and the existing programs or entities meeting the economic need.</description>
    <label>Is Economic Need</label>
    <type>Checkbox</type>
</CustomField>