force-app/main/default/objects/Case/fields/Is_Pass_Through__c.field-meta.xml
<CustomField>
    <fullName>Is_Pass_Through__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pass Through?</label>
    <type>Checkbox</type>
</CustomField>