force-app/main/default/objects/Case/fields/Is_Statutory_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Statutory_Program__c</fullName>
    <label>Is Statutory Program?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>