force-app/main/default/objects/Case/fields/Is_Variation_or_Sub_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Variation_or_Sub_Program__c</fullName>
    <label>Is Variation or Sub Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>