force-app/main/default/objects/Case/fields/Is_Variation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Is_Variation_Reason__c</fullName>
    <label>Is Variation Reason</label>
    <type>TextArea</type>
</CustomField>