force-app/main/default/objects/Case/fields/IsEconomicNeed_Reason__c.field-meta.xml
<CustomField>
    <fullName>IsEconomicNeed_Reason__c</fullName>
    <label>IsEconomicNeed Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>