force-app/main/default/objects/Case/fields/Maximum_Award_Size__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Award_Size__c</fullName>
    <label>Maximum Award Size</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>