force-app/main/default/objects/Case/fields/New_Program_Proposal_Status__c.field-meta.xml
<CustomField>
    <fullName>New_Program_Proposal_Status__c</fullName>
    <label>Program Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Program Proposal</fullName>
            </value>
            <value>
                <fullName>Division VP Approval 1</fullName>
            </value>
            <value>
                <fullName>Steering Committee Approval 1</fullName>
            </value>
            <value>
                <fullName>Investment Development</fullName>
            </value>
            <value>
                <fullName>Working Group Approval</fullName>
            </value>
            <value>
                <fullName>Division VP Approval 2</fullName>
            </value>
            <value>
                <fullName>Steering Committee Approval 2</fullName>
            </value>
            <value>
                <fullName>AAC</fullName>
            </value>
            <value>
                <fullName>Board Approval</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>