force-app/main/default/objects/Case/fields/Opportunity_Segment_and_Population__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Segment_and_Population__c</fullName>
    <description>What economic need will this change be designed to address? Who are the target recipients, and how are they uniquely positioned to take advantage of this program?</description>
    <label>Opportunity Segment and Population</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>