force-app/main/default/objects/Case/fields/Pilot_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Outcome__c</fullName>
    <label>Pilot Outcome</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>