force-app/main/default/objects/Case/fields/Portfolio_Addition__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Addition__c</fullName>
    <label>Portfolio Addition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>