force-app/main/default/objects/Case/fields/Program_Awards_Standings__c.field-meta.xml
<CustomField>
    <fullName>Program_Awards_Standings__c</fullName>
    <label>Program Awards Standings</label>
    <type>Url</type>
</CustomField>