force-app/main/default/objects/Case/fields/Program_Guideline_Link__c.field-meta.xml
<CustomField>
    <fullName>Program_Guideline_Link__c</fullName>
    <inlineHelpText>Previous year&apos;s program guideline link, used for Program Change request</inlineHelpText>
    <label>Program Guideline Link</label>
    <type>Url</type>
</CustomField>