force-app/main/default/objects/Case/fields/Program_History__c.field-meta.xml
<CustomField>
    <fullName>Program_History__c</fullName>
    <label>Program History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>