force-app/main/default/objects/Case/fields/Program_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Program_Outcomes__c</fullName>
    <label>Program Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>