force-app/main/default/objects/Case/fields/Program_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Short_Name__c</fullName>
    <label>Program Short Name</label>
    <length>6</length>
    <type>Text</type>
</CustomField>