force-app/main/default/objects/Case/fields/Purpose_Statement__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Statement__c</fullName>
    <label>Purpose Statement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>