force-app/main/default/objects/Case/fields/Report_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Report_Frequency__c</fullName>
    <label>Report Frequency</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>