force-app/main/default/objects/Case/fields/Scoring_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Criteria__c</fullName>
    <label>Scoring Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>