force-app/main/default/objects/Case/fields/Statement_of_Need_is_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Statement_of_Need_is_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statement of Need is Submitted</label>
    <type>Checkbox</type>
</CustomField>