force-app/main/default/objects/Case/fields/Supporting_Data__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Data__c</fullName>
    <label>Supporting Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>