force-app/main/default/objects/Case/fields/Target_Audience_Benefiting__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience_Benefiting__c</fullName>
    <label>Target Audience Benefiting</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>