force-app/main/default/objects/Case/fields/Threat_Preparedness__c.field-meta.xml
<CustomField>
    <fullName>Threat_Preparedness__c</fullName>
    <label>Threat Preparedness</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>