force-app/main/default/objects/Case/recordTypes/Change_to_a_Program_Proposal.recordType-meta.xml
<RecordType>
    <fullName>Change_to_a_Program_Proposal</fullName>
    <active>true</active>
    <businessProcess>Internal</businessProcess>
    <description>Changes to a Program case record type</description>
    <label>Change to a Program Proposal</label>
</RecordType>