force-app/main/default/objects/Case/recordTypes/New_Program_Proposal.recordType-meta.xml
<RecordType>
    <fullName>New_Program_Proposal</fullName>
    <active>true</active>
    <businessProcess>Internal</businessProcess>
    <description>New Program Proposal</description>
    <label>New Program Proposal</label>
</RecordType>